# OLXPARS

./: .gitignore  CMakeLists.txt  CMakeSettings.json  core.c  corecurl.c  coreparser.c  database.c  main.c  my.html  olx.sqlite  olxmanager.c  olxparse.c  search.html  test.html  test.json  test.txt  test2.json  views.html
include/: core.h  corecurl.h  coreparser.h  database.h  olxmanager.h  olxparse.h
